# BookKeeper

./: .dockerignore  .env-dev  .gitignore  .pre-commit-config.yaml  Readme.md  manage.py  pyproject.toml
bookkeeper/: asgi.py  settings.py  urls.py  wsgi.py
bookkeeper/static/assets/favicon/: browserconfig.xml  manifest.json  site.webmanifest
bookkeeper/static/css/: offcanvas.css
bookkeeper/static/js/: offcanvas.js
bookkeeper/templates/: base.html  navbar.html
bookkeeper/templates/registration/: logged_out.html  login.html
bookkeeping/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
bookkeeping/management/commands/: import_old_bookings.py
bookkeeping/migrations/: 0001_initial.py  0002_bookentry_bookentry_bookkeeping_booking_543baa_idx.py  0002_bookentry_receipt_and_more.py  0003_alter_bookentry_options.py  0004_tripflatrate_businesstrip.py  0005_alter_user_options.py  0006_alter_user_email.py  0007_businesstrip_inherits_bookentry.py  0008_bookentry_polymorphic_ctype.py
bookkeeping/static/css/: book.css  registration.css
bookkeeping/templates/accounts/: profile.html
bookkeeping/templates/bookkeeping/: base.html  bookentry_archive_year.html  bookentry_form.html  bookentry_list.html  bookentry_split.html  businesstrip_form.html
bookkeeping/templates/forms/: bookentry.html
bookkeeping/templatetags/: entry_stats.py  return_url.py
deploy/: deploy.sh  docker-compose.yml
deploy/nginx/: Dockerfile  bookkeeper.nginx.conf  nginx.conf
deploy/web/: Dockerfile  entrypoint.sh  gunicorn.conf.py
mailreceiver/: mail_parsing.py  mail_responses.py  models.py  test_parsing.py  urls.py  views.py
mailreceiver/management/commands/: run_mail_receiver.py  send_message.py
mailreceiver/templates/mail_responses/: entry_added.html  entry_added.txt  parsing_failed.html  parsing_failed.txt
