[tool.poetry]
name = "bookkeeper"
version = "0.1.0"
description = ""
authors = ["Daniel Grießhaber <dangrie158@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.5.0"
django-extensions = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
