[tool.poetry]
name = "bookkeeper"
version = "0.1.0"
description = ""
authors = ["Daniel Grießhaber <dangrie158@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
django-stubs-ext = "^0.5.0"
django-widget-tweaks = "^1.4.12"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.5.0"
django-extensions = "^3.2.0"
mypy = "^0.961"
django-stubs = {extras = ["compatible-mypy"], version = "^1.12.0"}
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "bookkeeper.settings"
